Remove unused stringr, bigstatsr, graphics packages from DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,13 +12,10 @@ Description: The CCs4prots package allows to assess and handle ambiguous protein
 Imports:
 	data.table,
 	graph,
-  bigstatsr,
   Matrix,
   magrittr,
-  stringr,
   methods,
-  utils,
-  graphics
+  utils
 Depends:
   R (>= 3.6.0),
 Suggests:
@@ -34,3 +31,5 @@ LazyData: false
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
+URL: https://github.com/laurafancello/CCs4prot
+BugReports: https://github.com/laurafancello/CCs4prot/issues
