--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,34 +2,70 @@ Package: CCs4prot
 Title: Handle Ambiguity of Protein Identifications from Shotgun Proteomics
 Version: 0.0.0.9000
 Authors@R: 
-    person(given = "Laura",
-           family = "Fancello",
-           role = c("aut", "cre"),
-           email = "laura.fancello@cea.fr", 
-           comment = c(ORCID = "0000-0003-4708-4080"))
+    c(person(given = "Laura",
+             family = "Fancello",
+             role = c("aut", "cre"),
+             email = "laura.fancello@cea.fr",
+             comment = c(ORCID = "0000-0003-4708-4080")),
+      person(given = "Thomas",
+             family = "Burger",
+             role = c("aut", "ctb"),
+             email = "thomas.burger@cea.fr",
+             comment = c(ORCID = "0000-0003-3539-3564")))
 Maintainer: Laura Fancello <laura.fancello@cea.fr>
-Description: The CCs4prots package allows to assess and handle ambiguous protein identifications obtained in shotgun proteomics due to the presence of shared peptides. It implements methods for two main applications. First, it allows to represent and quantify ambiguity of protein identifications by means of graph connected components (CCs). In graph theory, CCs are defined as the largest subgraphs in which any two vertices are connected to each other by a path and not connected to any other of the vertices in the supergraph. Here, proteins sharing one or more peptides are thus gathered in the same CC (multi-protein CC), while unambiguous protein identifications constitute CCs with a single protein vertex (single-protein CCs). Therefore, the proportion of single-protein CCs and the size of multi-protein CCs can be used to measure the level of ambiguity of protein identifications. The package implements a strategy to efficiently calculate graph connected components on large datasets and allows to visually inspect them. Secondly, the CCs4prots package allows to exploit the increasing availability of matched transcriptomic and proteomic datasets to  reduce ambiguity of protein identifications. More precisely, it implement a transcriptome-based post-hoc filtering strategy which aims at reducing ambiguity in protein identifications by removing those proteins whose corresponding transcript is not expressed in the sample-matched transcriptome. The underlying assumption is that, according to the central dogma of biology, there can be no proteins without the corresponding transcript. Most importantly, the package allows to visually inspect the effect of the filtering on protein identifications and quantify ambiguity before and after filtering by means of graph connected components. As such, it constitutes a reproducible and transparent method to exploit transcriptome information to enhance protein identifications.
-Imports:
-	data.table,
-	graph,
-  Matrix,
-  magrittr,
-  methods,
-  utils
-Depends:
-  R (>= 3.6.0),
-Suggests:
-  knitr,
-  rmarkdown,
-  roxygen2,
-  BiocStyle,
-  igraph,
-  ggplot2
+Description: The CCs4prots package allows to assess and handle ambiguous
+    protein identifications obtained in shotgun proteomics due to the
+    presence of shared peptides. It implements methods for two main
+    applications. First, it allows to represent and quantify ambiguity of
+    protein identifications by means of graph connected components (CCs).
+    In graph theory, CCs are defined as the largest subgraphs in which any
+    two vertices are connected to each other by a path and not connected
+    to any other of the vertices in the supergraph. Here, proteins sharing
+    one or more peptides are thus gathered in the same CC (multi-protein
+    CC), while unambiguous protein identifications constitute CCs with a
+    single protein vertex (single-protein CCs). Therefore, the proportion
+    of single-protein CCs and the size of multi-protein CCs can be used to
+    measure the level of ambiguity of protein identifications. The package
+    implements a strategy to efficiently calculate graph connected
+    components on large datasets and allows to visually inspect them.
+    Secondly, the CCs4prots package allows to exploit the increasing
+    availability of matched transcriptomic and proteomic datasets to
+    reduce ambiguity of protein identifications. More precisely, it
+    implement a transcriptome-based filtering strategy fundamentally
+    consisting in the removal of those proteins whose corresponding
+    transcript is not expressed in the sample-matched transcriptome. The
+    underlying assumption is that, according to the central dogma of
+    biology, there can be no proteins without the corresponding
+    transcript. Most importantly, the package allows to visually inspect
+    the effect of the filtering on protein identifications and quantify
+    ambiguity before and after filtering by means of graph connected
+    components. As such, it constitutes a reproducible and transparent
+    method to exploit transcriptome information to enhance protein
+    identifications.
 License: GPL-3
+URL: https://github.com/laurafancello/CCs4prot
+BugReports: https://github.com/laurafancello/CCs4prot/issues
+Depends:
+    R (>= 3.6.0)
+Imports:
+    data.table,
+    graph,
+    magrittr,
+    Matrix,
+    methods,
+    utils
+Suggests:
+    BiocStyle,
+    ggplot2,
+    igraph,
+    knitr,
+    rmarkdown,
+    roxygen2,
+    testthat (>= 3.0.0)
+VignetteBuilder: 
+    knitr
+Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: false
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-VignetteBuilder: knitr
-URL: https://github.com/laurafancello/CCs4prot
-BugReports: https://github.com/laurafancello/CCs4prot/issues
