--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,7 +42,7 @@ Description: The net4pg package allows to assess and handle ambiguous
     components. As such, it constitutes a reproducible and transparent
     method to exploit transcriptome information to enhance protein
     identifications. All methods implemented in the net4pg package are fully 
-    described in Fancello and Burger (2021) doi:10.1101/2021.09.07.459229.
+    described in Fancello and Burger (2021) <doi:10.1101/2021.09.07.459229>.
 License: GPL-3
 URL: https://github.com/laurafancello/net4pg
 BugReports: https://github.com/laurafancello/net4pg/issues
